# ATTACK-RISK

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql.yml  scorecard.yml
examples/flow_exports/: Uber Breach.json
src/: main.py  my-notebook.ipynb  playpen.ipynb  test.ipynb  test_main.py  weights.py
src/attack_flow_extension/: flow.py
src/pgmpy_example/: pgmpy_example_code.py
src/stix_probability/: weights.py
test/attack-flow/: Cobalt Kitty Campaign.json
