[tool.poetry]
name = "ATTACK-RISK"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pgmpy = "^0.1.25"
polars = "^0.20.31"
mitreattack-python = "^3.0.6"
stix = "^1.2.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"